[package]
name = "mstodo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.4", features = ["derive"] }
keyring = "2.0.2"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1", features = ["rt", "time", "macros"] }

[[bin]]
name = "mstodo"
path = "src/main.rs"

[lib]
name = "mstodo_lib"
path = "mstodo_lib/lib.rs"
